--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.24.9
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
+  bloc_test: ^9.1.5
+  mocktail: ^1.0.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
