--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get_it: ^7.6.7
   animated_splash_screen: ^1.3.0
   page_transition: ^2.1.0
+  http: ^1.2.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
