--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   page_transition: ^2.1.0
   http: ^1.2.0
   internet_connection_checker: ^1.0.0+1
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
