--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   flutter_secure_storage: ^9.0.0
   go_router: ^13.2.0
+  motion_tab_bar: ^2.0.4
 
 dev_dependencies:
   flutter_test:
