--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   go_router: ^13.2.0
   motion_tab_bar: ^2.0.4
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
