--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   go_router: ^13.2.0
   motion_tab_bar: ^2.0.4
   shimmer: ^3.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
