--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   motion_tab_bar: ^2.0.4
   shimmer: ^3.0.0
   intl: ^0.18.1
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
